    * replace options `--min` and `--max` in favor of `--max-entries-to-keep` and `--cleanup-threshold`:
      * `--max-entries-to-keep` specifies the number of entries to keep in the db. Defaults to 5000.
      * `--cleanup-threshold`: When the number of entries exceeds this threshold, the cleanup process is initiated.
        Defaults to the value of `--max-entries-to-keep`.
    

  Fix:
  * wrongly aligned resize bar on Manage UI flexigrid tables when browser is zoomed or scaled


 -- LinOTP Packaging <packaging@linotp.de>  Mon, 08 Apr 2024 10:00:00 +0200

linotp (3.3.2-1) buster; urgency=low

  Fix:
    * migration to 3.0.0 no longer fails (due to missing arg)

 -- LinOTP Packaging <packaging@linotp.de>  Wed, 19 Jun 2024 10:00:00 +0200

linotp (3.3.1-1) buster; urgency=low

  * fix unbound variable in containers `entrypoint.sh`

 -- LinOTP Packaging <packaging@linotp.de>  Tue, 18 Jun 2024 10:00:00 +0200

linotp (3.3-1) buster; urgency=low

  Breaking Changes:
  * Renamed the following config variables and some changed their defaults:
    * `LOGGING_FILE_LEVEL` -> `LOG_FILE_LEVEL`
      * default: `WARNING` -> `DEBUG`
    * `LOGGING_CONSOLE_LEVEL` -> `LOG_CONSOLE_LEVEL`
      * default: `WARNING` -> `DEBUG`
    * `LOGGING_SQLALCHEMY_LEVEL` -> `LOG_LEVEL_DB_CLIENT`
    * `LOGGING` -> `LOG_CONFIG`
  * default of `LOGGING_LEVEL` changed from `INFO` to `WARNING`
  * when migrating from LinOTP 2.x, the audit log is no longer truncated to circumvent issues with
    privileges in different database handlers. Old audit log entries that are not truncated now,
    are reported to have a failing signature check because the method has changed with LinOTP version 3.0.

  Deprecations:
  * In the future config variable `LOGGING_LEVEL` will be replaced by `LOG_LEVEL`.
    `LOG_LEVEL` can and should be used from now on. `LOG_LEVEL` defaults to `WARNING`.

  Features:
  * new API endpoints to retrieve tokens:
    * /api/v2/tokens