@@ -11,7 +11,11 @@ linotp (3.4~dev0-1) UNRELEASED; urgency=low
       * `--cleanup-threshold`: When the number of entries exceeds this threshold, the cleanup process is initiated.
         Defaults to the value of `--max-entries-to-keep`.
     
-
+  Features:
+  * add option `--delete-after-days` to `linotp audit cleanup`:
+    Delete entries older than the given number of days (starting from the beginning of the day).
+    Can't be used alongside `--max-entries-to-keep` or `--cleanup-threshold`!
+  
   Fix:
   * wrongly aligned resize bar on Manage UI flexigrid tables when browser is zoomed or scaled
 
